toggle menu fixed and location bar displayed on small screen

--- a/src/components/menu/home/home.css
+++ b/src/components/menu/home/home.css
@@ -10,6 +10,7 @@
     flex-direction: column;
     justify-content: center;
     background-color: rgb(219, 222, 223);
+    isolation: isolate;
 
 }
 
