--- a/src/components/menu/home/slider/slider.css
+++ b/src/components/menu/home/slider/slider.css
@@ -6,7 +6,7 @@
     overflow: hidden; 
     
 }
-.overlay::after{
+.sliderDiv::after{
     content:' ';
     position:absolute;
     left:0;
